2024-11-16T00:55:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11865730074 # 481
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-16
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 868 1343 / 872 1347
* notice: next accum: outdated-unq outdated-all / unq all: 869 1344 / 872 1347
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-01] / []

2024-11-14T00:53:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11828582263 # 479
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-14
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 868 1343 / 871 1346
* notice: next accum: outdated-unq outdated-all / unq all: 868 1343 / 872 1347
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-11-13]

2024-11-11T00:54:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11770106153 # 476
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-11
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 867 1342 / 870 1345
* notice: next accum: outdated-unq outdated-all / unq all: 868 1343 / 871 1346
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-10-27] / [2024-11-10]

2024-11-09T00:51:14Z: