@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-11-16T00:55:28Z",
-  "count_outdated" : 1344,
-  "uniques_outdated" : 869,
+  "timestamp" : "2024-11-23T00:55:12Z",
+  "count_outdated" : 1345,
+  "uniques_outdated" : 870,
   "count" : 1347,
   "uniques" : 872,
   "clones" : [
-    {
-      "timestamp": "2024-11-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-11-10T00:00:00Z",
       "count": 1,
