@@ -1,3 +1,12 @@
+2024-11-23T00:55:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11982529262 # 488
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-23
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 869 1344 / 872 1347
+* notice: next accum: outdated-unq outdated-all / unq all: 870 1345 / 872 1347
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-11-08] / []
+
 2024-11-16T00:55:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11865730074 # 481
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-11-16
